<resources>
    <string name="app_name">Kawulu</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login_activity_temp">Sign in</string>
    <string name="Register">Create New Account</string>
    <string name="First_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="Email_address">Email address</string>
    <string name="Password">Password</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="Category">Category</string>
    <string name="title">Title</string>
    <string name="record">hold to record</string>
    <string name="timerVal">00:00:00</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="post">Post</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_to">Share</string>
    <string name="next">Next</string>
    <string name="user_name">User Name</string>
    <string name="record_b">Record</string>
    <string name="listen">Listen</string>
    <string name="play_audio">Play / Stop</string>
    <string name="reply">Reply</string>
    <string name="like">Like</string>
    <string name="download">Download</string>
    <string name="add_reply">Add Reply</string>
    <string name="view_replies">View Replies</string>
    <string name="my_posts">My Posts</string>
    <string name="notification">Notification</string>
    <string name="delete_post">Delete Post</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="sports">Sports</string>
    <string name="educational">Educational</string>
    <string name="political">Political</string>
    <string name="like_">Like</string>
    <string name="delete">delete</string>
    <string name="home">home</string>
</resources>
