<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pushpika.voicerecordchat.AddPost">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:layout_alignParentTop="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@id/title"/>

       <Button android:id="@+id/record_btn" style="?android:textAppearanceSmall"
       android:layout_width="match_parent"
           android:layout_height="60dp"
       android:layout_marginTop="16dp"
           android:text="@string/record"
           android:layout_marginRight="10dp"
       android:textStyle="bold"
           android:layout_margin="5dp"
           android:layout_below="@id/editText"
       android:textColor="#fff"
       android:background="#f8fb9a09"
           android:layout_weight="5"
           android:textSize="40dp" />

    <TextView
        android:id="@+id/timerValue"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:textSize="35sp"
        android:textColor="#201d1d"
        android:text="@string/timerVal"
        android:layout_weight="3"
        android:layout_below="@+id/record_btn"
        android:layout_centerHorizontal="true" />

    <Button android:id="@+id/play_btn" style="?android:textAppearanceSmall"
        android:layout_width="fill_parent" android:layout_height="60dp"
        android:text="@string/play"
        android:textStyle="bold"
        android:onClick="play"
        android:textColor="#fff"
        android:background="#0d2d53"
        android:textSize="30dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@id/timerValue"
        android:layout_margin="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button android:id="@+id/delete_btn" style="?android:textAppearanceSmall"
        android:layout_width="fill_parent" android:layout_height="60dp"
        android:text="@string/delete"
        android:textStyle="bold"
        android:onClick="delete"
        android:textColor="#fff"
        android:background="#a00"
        android:layout_margin="5dp"
        android:textSize="30dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/play_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button android:id="@+id/post_btn" style="?android:textAppearanceSmall"
        android:layout_width="fill_parent" android:layout_height="60dp"
        android:text="@string/post"
        android:textStyle="bold"
        android:onClick="post"
        android:textColor="#fff"
        android:background="#21ccc6"
        android:textSize="30dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_margin="5dp"
        android:layout_below="@id/delete_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
