<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pushpika.voicerecordchat.AudioClipActivity">

    <Button android:id="@+id/PlayBtn" style="?android:textAppearanceSmall"
        android:layout_width="match_parent" android:layout_height="45dp"
        android:text="@string/play_audio"
        android:textStyle="bold"
        android:onClick="Play"
        android:textColor="#fff"
        android:background="#21cc60"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <Button android:id="@+id/ReplyBtn" style="?android:textAppearanceSmall"
        android:layout_width="match_parent" android:layout_height="45dp"
        android:text="@string/reply"
        android:textStyle="bold"
        android:onClick="Reply"
        android:textColor="#fff"
        android:background="#b5cc21"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/PlayBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button android:id="@+id/LikeBtn" style="?android:textAppearanceSmall"
        android:layout_width="match_parent" android:layout_height="45dp"
        android:text="@string/like"
        android:textStyle="bold"
        android:onClick="Like"
        android:textColor="#fff"
        android:background="#2185cc"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button android:id="@+id/DownloadBtn" style="?android:textAppearanceSmall"
        android:layout_width="match_parent" android:layout_height="45dp"
        android:text="@string/download"
        android:textStyle="bold"
        android:onClick="Download"
        android:textColor="#fff"
        android:background="#8d21cc"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="71dp" />


</RelativeLayout>
