<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:weightSum="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin">
        tools:context="com.example.pushpika.voicerecordchat.LoginActivity"
        <!-- Login progress -->

        <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="200dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:id="@+id/imageView2"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:layout_marginTop="15dp" />

        <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
            android:layout_height="271dp"
            android:layout_marginTop="-45dp">


            <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical">

                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginTop="20dp"
                    android:focusable="true" />

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true"
                    android:layout_marginTop="15dp"
                    android:focusable="true" />

                <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="35dp"
                    android:text="@string/action_sign_in"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:background="#cc2121"/>

                <TextView android:id="@+id/register" style="?android:textAppearanceSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/Register"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:onClick="go_register"
                    android:textColor="#727979"

                    android:layout_marginLeft="80dp"
                    />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

