<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pushpika.voicerecordchat.EmailAddressEntryActivity">


    <TextView
        android:text="@string/Email_address"
        android:id="@+id/Email_address_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"/>

    <AutoCompleteTextView android:id="@+id/Email_address" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" android:maxLines="1"
        android:singleLine="true"
        android:layout_marginTop="75dp"
        android:layout_below="@+id/Email_address_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button android:id="@+id/bRegister" style="?android:textAppearanceSmall"
        android:layout_width="match_parent" android:layout_height="45dp"
        android:text="@string/next"
        android:textStyle="bold"
        android:onClick="sendEmailAddress"
        android:textColor="#fff"
        android:background="#cc2121"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
