<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pushpika.voicerecordchat.AddComment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:id="@+id/linear_1">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linear_1"
        android:layout_marginTop="20dp"
        android:id="@+id/linear_2">


    </LinearLayout>


    <Button android:id="@+id/record_btn" style="?android:textAppearanceSmall"
        android:layout_width="194dp" android:layout_height="75dp"
        android:text="@string/record_b"
        android:textStyle="bold"
        android:onClick="record"
        android:textColor="#ffffff"
        android:background="#f8fb9a09"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/linear_2"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/timerValue"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="35sp"
        android:textColor="#201d1d"
        android:text="@string/timerVal"
        android:layout_below="@+id/linear_2"
        android:layout_centerHorizontal="true" />

    <Button android:id="@+id/play_btn" style="?android:textAppearanceSmall"
        android:layout_width="250dp" android:layout_height="60dp"
        android:text="@string/play"
        android:textStyle="bold"
        android:onClick="play"
        android:textColor="#fff"
        android:background="#0d2d53"
        android:textSize="30dp"
        android:allowUndo="true"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button android:id="@+id/stop_btn" style="?android:textAppearanceSmall"
        android:layout_width="match_parent" android:layout_height="60dp"
        android:text="@string/stop"
        android:textStyle="bold"
        android:onClick="stop"
        android:textColor="#fff"
        android:background="#8221cc"
        android:layout_weight="1"
        android:textSize="30dp"
        android:layout_below="@+id/timerValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button android:id="@+id/post_btn" style="?android:textAppearanceSmall"
        android:layout_width="match_parent" android:layout_height="75dp"
        android:text="@string/post"
        android:textStyle="bold"
        android:onClick="post"
        android:textColor="#040404"
        android:background="#21ccc6"
        android:layout_weight="5"
        android:textSize="40dp"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/play_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
